Build nouveau DRI driver

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,12 @@
 mesa (7.8.2-2) UNRELEASED; urgency=low
 
+  [ Julien Cristau ]
   * Add missing dependencies to libegl1-mesa-dev, thanks to Alexandros
     Frantzis (LP: #600243).
+
+  [ Dylan Noblesmith ]
+  * debian/rules:
+    - Explicitly build the nouveau DRI driver.
 
  -- Julien Cristau <jcristau@debian.org>  Thu, 15 Jul 2010 17:05:56 +0100
 
