--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ mesa (7.8.2-2) UNRELEASED; urgency=low
   [ Dylan Noblesmith ]
   * debian/rules:
     - Explicitly build the nouveau DRI driver.
+    - Only build Gallium intel on Linux and FreeBSD (and only on x86).
 
  -- Julien Cristau <jcristau@debian.org>  Thu, 15 Jul 2010 17:05:56 +0100
 
